Bug 105434 - libinput-1.10.2: Synaptics touchpad misinterprets movement from top as palm
Summary: libinput-1.10.2: Synaptics touchpad misinterprets movement from top as palm
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: libinput (show other bugs)
Version: unspecified
Hardware: Other Linux (All)
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on: 101574
Blocks:
  Show dependency treegraph
 
Reported: 2018-03-11 00:25 UTC by main.haarp
Modified: 2018-03-20 08:03 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description main.haarp 2018-03-11 00:25:36 UTC
Bug 104889 has been partially fixed through bug 105265 and closed, but one issue remains. In order to not make a mess of bug organization, I'm opening a new bug for it.

The SynPS/2 Synaptics TouchPad on my Thinkpad W530 with correct size being set, exhibits a certain behavior. Movement originating from beyond the upper edge (other edges too, presumably) is triggering palm detection. This happens regardless of whether one or two fingers are used.

If the finger(s) are moved quickly enough, they can clear the timeout in tp_palm_detect_move_out_of_edge() and will behave correctly, albeit only after a delay.

If they are moved slowly, e.g. when you want to scroll a page slowly, they are consistently misinterpreted as a palm and one has to lift the finger to clear that condition.

See attachment 137641 [details] of the aforementioned bug for an evemu recording. In it I attempted 2f-scrolled three times. the first two attempts were blocked, the third succeeded in scrolling.

I have no ideas how palm-detection could be improved for this semi-mt touchpad. For me, the ideal workaround would be an option to disable palm detection entirely, as I have no need for it.


Thanks!
Comment 1 Peter Hutterer 2018-03-13 00:21:56 UTC
commit d786b55daa99c6f891da05ec91617eccdc843333
Author: Peter Hutterer <>
Date:   Tue Mar 13 09:33:57 2018 +1000

     touchpad: don't enable top palm detection on touchpads <= 55mm high
Comment 2 main.haarp 2018-03-20 08:03:52 UTC
Works well for me. Thanks a lot!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.